# mise

./: .gitignore  LICENSE  index.html  package-lock.json  package.json  vite.config.js
.github/scripts/: upload_manifest_r2.py  upload_r2.py
.github/workflows/: build.yml
src/: App.vue  currency.js  main.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src/data/: ingredient_library.js  suppliers.js
src/db/: database.js
src/router/: index.js
src/stores/: auth.js  conversions.js  ingredients.js  recipes.js  waste.js
src/views/: Allergens.vue  Conversions.vue  Dashboard.vue  Ingredients.vue  Inventory.vue  Login.vue  MenuEngineering.vue  MenuPricing.vue  Plans.vue  PlateCost.vue  PrepPlanner.vue  PriceCompare.vue  PriceTrends.vue  PrintMenu.vue  Recipes.vue  Reports.vue  Scaling.vue  Settings.vue  Sizes.vue  SpecSheets.vue  Suppliers.vue  WasteTracker.vue
